fix: use overflow-x clip to allow sticky nav bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
   html {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
+    overflow-x: clip;
   }
 
   body {
@@ -22,7 +22,7 @@
     min-height: 100vh;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow-x: clip;
     color: var(--foreground);
     background: var(--background);
   }
